blog: overview of linear algebra blog has been expanded

--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -2,9 +2,40 @@
 title: Overview of Linear Algebra
 type: "blog"
 date: 2021-05-17
-published: false
+published: true
 ---
 
 import { Link } from 'gatsby'
 
-<Link to="./vector-space">Vector space</Link>
+This blog post is my note  whilte learning Abstract Linear Algebra along the way.
+Make sure you are familiar with some math symbols. I will keep updating the content of this page from time to time.
+
+The word “vector” should not be with the confused with arrow representations mostly used in Linear Algebra textbooks. 
+In this blog post, the word “vector” is being used to describe any element of a vector space.
+
+For simplicity, let $+$ be addition, $-$ substraction, $\times$ multiplication, and $\div$ division.
+
+To be able read through this entire series easily, you should be familiar with some sets of numbers, namely:
+* Integer numbers $\mathbb{Z}$
+* Real numbers $\mathbb{R}$
+* Natural numbers $\mathbb{N}$
+* Complex numbers $\mathbb{C}$
+
+I am going to split this blog post into sub-sections so readers will not get overwhelmed while reading.
+1. Vector Spaces _(coming soon)_
+2. Linear Transformations and Matrices _(coming soon)_
+3. Matrix Operations and Systems of Linear Equations _(coming soon)_
+4. Determinants _(coming soon)_
+5. Diagonalizations _(coming soon)_
+6. Inner Product Spaces _(coming soon)_
+7. Canonical Forms _(coming soon)_
+
+<!-- 
+1. <Link to="./vector-space">Vector space</Link>
+2. <Link to="./linear-transformations-and-matrices">Linear Transformations and Matrices</Link>
+3. <Link to="./matrix-operations-and-systems-of-linear-equations">Matrix Operations and Systems of Linear Equations</Link>
+4. <Link to="./determinants">Determinants</Link> 
+5. <Link to="./diagonalizations">Diagonalizations</Link>
+6. <Link to="./inner-product-spaces">Inner Product Spaces</Link>
+7. <Link to="./canonical-forms">Canonical Forms</Link>
+-->
