--- a/content/blog/using-sql-with-python/index.mdx
+++ b/content/blog/using-sql-with-python/index.mdx
@@ -13,6 +13,16 @@ Everything in a relational database is represented in tables, like in the pictur
 
 ![A Relational Databases Tables](./tables.png)
 
+In this post, we are going to learn a few things:
+
+1. How to install SQL frameworks
+2. How to create and delete user, as well as to assign privileges to a user
+3. How to create a database with a PostgreSQL script
+4. How to show all tables in a database
+5. How to access a PostgreSQL database with Python
+6. How to convert tables into CSV files
+7. How to convert CSV files into SQLite3 DB files
+
 <i>
   *NOTE: Some of the commands are unique to MacOS. Please find out what commands
   to run specific to your operating system.
@@ -20,11 +30,13 @@ Everything in a relational database is represented in tables, like in the pictur
 
 # 1. Installation
 
-First, we have to install the SQL server that you intend to use.
+First, we have to install the SQL server that you intend to use. Choose one.
 
 ```bash:title=Terminal
-# MacOS
+# To install PostgreSQL
 brew install postgresql
+
+# To install SQLite3
 pip install --user sqlite3
 ```
 
@@ -54,12 +66,12 @@ brew services
 
 ![PostgreSQL Server Is Up](./verify-server.png)
 
-# 2. Creating A User
+# 2. Create & Delete Users
 
 Once the server is up, run `psql postgres` and it will redirect us to the postgresql interactive shell
 Let's create a new superuser that allows us to create any databases on the server.
 
-```sql:title=PostgreSQL Interactive Shell
+```sql:title=plsq-shell
 CREATE USER a_user WITH SUPERUSER LOGIN;
 ALTER ROLE a_user WITH CREATEDB;
 ```
@@ -69,7 +81,17 @@ ALTER ROLE a_user WITH CREATEDB;
 `LOGIN` should be specified. Otherwise, the server will reject the logging in request.
 Then run `\du` in the shell to see if `a_user` has been successfully created.
 
+Assigning a privilege to a user is also important.
+In this case, we want `a_user` to be able to create a database.
+Thus we're adding a new privilege to it with `ALTER ROLE a_user WITH CREATEDB;`.
+
 ![Show Users in PostgreSQL](./check-user.png)
+
+If you accidentally create a user you don't indent to, simply run
+
+```sql:title=plsq-shell
+DROP ROLE {username};
+```
 
 # 3. Running AN SQL Script
 
@@ -104,6 +126,8 @@ psql a_user -h localhost -d film_db -f films.sql
 
 If you aren't sure what `-h`, `-d`, and `-f` mean, you can simply run `psql --help`.
 
+The command above, with the `a_user` user account, execute and store the tables described in the script into a database called `film_db`.
+
 After running the script, go back to the PostgreSQL interactive shell and access the film database using `a_user`.
 
 ```bash:title=Terminal
@@ -123,7 +147,7 @@ To verify if the tables were created successfully, simply run `\dt` in the shell
 (4 rows)
 ```
 
-# 4. Accessing The Table With Python
+# 4. Accessing A Database With Python
 
 Since we have PostgreSQL installed and a database in the server, we need to install `psycopg2` by running `pip install --user psycopg2`.
 
@@ -155,12 +179,8 @@ for table in cursor.fetchall():
 To show every row and every column of the data in `film` table, simply run
 
 ```python:title=database.py
-cursor.execute("""
-  SELECT * FROM films;
-""")
-
-for datum in cursor.fetchall():
-    print(datum)
+cursor.execute("SELECT * FROM films;")
+print(cursor.fetchall())
 ```
 
 Say that we want to convert all the tables in the database into CSV files, add the following block of code to do so in the python script.
@@ -175,3 +195,33 @@ for table in tables:
 Now we have 4 different CSV files.
 Here is the downside of CSV files: when the number of data in the CSV file increases, the resouces our computers need to read the file also increases.
 There are some work around to avoid resource overconsumption by storing the data into Pickle files.
+However, storing millions of data in `.db` file can be another work around as well.
+
+# 5. Converting CSV files into SQLite DB files
+
+With SQLite3, we don't need to create any users since it doesn't need any server to run at all.
+Since we have all the CSV files that we need, we have to feed the data into `.db` files.
+
+```python:title=convert-csv-to-sqlitedb.py
+import sqlite3
+import pandas as pd
+tables = ["films", "people", "review", "roles"]
+
+for table in tables:
+    connection = sqlite3.connect(table+'.db')
+    dataframe = pd.read_csv(table+'.csv')
+    dataframe.to_sql(table, connection, if_exists='append', index = True)
+```
+
+Then we can see that four new `.db` files have been created. To make sure that these `.db` files are legit, simply run
+
+```python:title=test-if-db-files-are-legit.py
+connection = sqlite3.connect('films.db')
+cursor = connection.cursor()
+cursor.execute("SELECT * FROM films;")
+print(cursor.fetchall())
+```
+
+Do the same with the other db files. You just simply need to change `films` into another table's name.
+
+That's it. We just learned 8 keypoints mentioned in the beginning of the post. Hope you enjoy it.
