--- a/content/blog/using-sql-with-python/index.mdx
+++ b/content/blog/using-sql-with-python/index.mdx
@@ -193,7 +193,7 @@ for table in tables:
 ```
 
 Now we have 4 different CSV files.
-Here is the downside of CSV files: when the number of data in the CSV file increases, the resouces our computers need to read the file also increases.
+Here is the downside of CSV files: when the number of data in the CSV file increases, the computing resource to read the file also increases.
 There are some work around to avoid resource overconsumption by storing the data into Pickle files.
 However, storing millions of data in `.db` file can be another work around as well.
 
