removed sql script and host it somewhere

--- a/content/blog/using-sql-with-python/index.mdx
+++ b/content/blog/using-sql-with-python/index.mdx
@@ -96,7 +96,7 @@ DROP ROLE {username};
 # 3. Running AN SQL Script
 
 Below is a script that allows us to create IMDB film database automatically.
-The script can be downloaded <a href="./script.sql">here</a>.
+The script can be downloaded <a itemProp="url" itemType="http://schema.org/Url"href="https://drive.google.com/file/d/1wKMPcbj9jr3twYBUNwtz1xxayWkAaUwu/view?usp=sharing" target="\_blank" rel="nofollow noopener noreferrer">here</a>.
 After running this script, we will expect 4 tables which are `films`, `people`, `reviews`, and `roles`.
 
 ```sql:title=script.sql
