--- a/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
+++ b/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
@@ -94,7 +94,7 @@ for i in range(1, limit):
 
   for word in words:
     if(i % word[0] == 0):
-      string = string + word[1]
+      string = string + word[1] + " "
 
   if(string == ""):
     print(i)
@@ -106,7 +106,7 @@ for i in range(1, limit):
 For the solution above, we just have to add the additional conditions in `words` without having to tinker with the for-loop.
 
 ```python:title=fizzbuzz-v3.py
-words = [(3, "Fizz"), (5, "Buzz"), (7, "Boom"), (9, "ugh")]
+words = [(3, "Fizz"), (5, "Buzz"), (7, "Boom"), (9, "Ugh")]
 
 limit = 21
 
@@ -115,7 +115,7 @@ for i in range(1, limit):
 
   for word in words:
     if(i % word[0] == 0):
-      string = string + word[1]
+      string = string + word[1] + " "
 
   if(string == ""):
     print(i)
@@ -125,3 +125,11 @@ for i in range(1, limit):
 ```
 
 Clearly, `fizzbuzz-v3.py` is the most efficient solution so far by comparison.
+You can try it in the repl repository below.
+
+<iframe
+  frameborder="0"
+  width="100%"
+  height="700px"
+  src="https://replit.com/@bijonsetyawan/Fizz-Buzz-1?lite=true"
+></iframe>
