fizz buzz phrases fixed

--- a/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
+++ b/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
@@ -58,8 +58,8 @@ for i in range(1, limit):
 
 That is a tedious work to do and the code becomes bloated.
 
-There is another way and we call it **a string concatenation** technique we can use to tackle this problem.
-The code looks less bloated, but still the code is hard-coded.
+However, we can the **string concatenation** technique to tackle this problem.
+The code looks less bloated, but still it is hard-coded.
 
 ```python:title=string-concatenation-fizzbuzz.py
 limit = 11
