tag feature added

--- a/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
+++ b/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
@@ -2,7 +2,8 @@
 title: Fizz Buzz, Simple yet Misunderstood
 type: 'blog'
 date: 2021-02-10
-published: true
+published: false
+tags: ['Python']
 ---
 
 I am sure everyone has seen Fizz Buzz problem many times before, and thinks it is really easy to solve.
