--- a/content/blog/my-journey-in-computer-science/index.mdx
+++ b/content/blog/my-journey-in-computer-science/index.mdx
@@ -1,11 +1,13 @@
 ---
 title: My Journey in Computer Science
-type: "blog"
+type: 'blog'
 date: 2021-06-15
 published: false
+tags: ['Personal']
 ---
 
-Points: 
+Points:
+
 1. How it started
 2. How I expected the degree itself
 3. How it went
