--- a/content/blog/overview-of-linear-algebra/diagonalizations.mdx
+++ b/content/blog/overview-of-linear-algebra/diagonalizations.mdx
@@ -1,8 +1,9 @@
 ---
 title: Diagonalizations
-type: "blog"
+type: 'blog'
 date: 2021-05-17
 published: false
+tags: ['Linear Algebra']
 ---
 
 This blog is about Diagonalizations.
