--- a/content/blog/enabling-latex-with-gatsbyjs/index.mdx
+++ b/content/blog/enabling-latex-with-gatsbyjs/index.mdx
@@ -1,22 +1,25 @@
 ---
 title: Enabling Latex with Gatsby.js
-type: "blog"
+type: 'blog'
 date: 2021-02-13
 published: true
+tags: ['Web Dev']
 ---
 
 This blog is useful only if you have a website made with Gatsby.JS and MDX included in the project.
 
 # Install the Dependencies
+
 ```bash:title=terminal
 # npm
-npm install --save gatsby-remark-katex katex remark-math remark-html-katex 
+npm install --save gatsby-remark-katex katex remark-math remark-html-katex
 
 #yarn
 yarn install gatsby-remark-katex katex remark-math remark-html-katex
 ```
 
 # Include the Dependencies
+
 ```javascript:title=./gatsby-config.js
 module.exports = {
     plugins: [
@@ -31,7 +34,7 @@ module.exports = {
                     options: {
                         strict: `ignore`,
                         ...
-                        ...  
+                        ...
                     },
                 },
             ],
@@ -43,12 +46,13 @@ module.exports = {
 }
 ```
 
-However, I had to install `remark-html-katex` because it is used to wrap those HTML elements in the `<div class="katex-html">...</div>`. 
+However, I had to install `remark-html-katex` because it is used to wrap those HTML elements in the `<div class="katex-html">...</div>`.
 Without both of these, mathematical equations won't be shown in Latex format.
 
 As for the katex options, there is a thorough documentation [here](https://katex.org/docs/options.html).
 
 # Customize Markdown Elements
+
 There are many ways to customize the markdown elements, but this is going to be an easy one.
 
 ```javascript:title=./src/templates/blogpost-template.js
@@ -56,7 +60,7 @@ import { MDXRenderer } from "gatsby-plugin-mdx"
 import { MDXProvider } from '@mdx-js/react'
 
 const component = {
-    ol: (props) => { 
+    ol: (props) => {
         <ol {...props} className="list" />
     },
     h1: ({ children, props }) => {
