--- a/content/blog/overview-of-linear-algebra/canonical-forms.mdx
+++ b/content/blog/overview-of-linear-algebra/canonical-forms.mdx
@@ -1,8 +1,9 @@
 ---
 title: Canonical Forms
-type: "blog"
+type: 'blog'
 date: 2021-05-17
 published: false
+tags: ['Linear Algebra']
 ---
 
 This blog is about Canonical Forms.
