--- a/content/blog/overview-of-linear-algebra/inner-product-spaces.mdx
+++ b/content/blog/overview-of-linear-algebra/inner-product-spaces.mdx
@@ -1,8 +1,9 @@
 ---
 title: Inner Product Spaces
-type: "blog"
+type: 'blog'
 date: 2021-05-17
 published: false
+tags: ['Linear Algebra']
 ---
 
 This blog is about Inner Product Spaces.
