--- a/content/blog/overview-of-linear-algebra/linear-transformations-and-matrices.mdx
+++ b/content/blog/overview-of-linear-algebra/linear-transformations-and-matrices.mdx
@@ -1,8 +1,9 @@
 ---
 title: Linear Transformations and Matrices
-type: "blog"
+type: 'blog'
 date: 2021-05-17
 published: false
+tags: ['Linear Algebra']
 ---
 
 This blog is about Linear Transformations and Matrices
