--- a/content/blog/overview-of-linear-algebra/vector-space.mdx
+++ b/content/blog/overview-of-linear-algebra/vector-space.mdx
@@ -1,14 +1,16 @@
 ---
 title: Vector Space
-type: "blog"
+type: 'blog'
 date: 2021-05-17
 published: false
+tags: ['Linear Algebra']
 ---
 
 Before defining what vector space is, we should know what a group $\mathbb{G}$ and a field $\mathbb{F}$ are.
 
 Let $\mathbb{S}$ be a set of numbers, and $\circ$ an arbitrary operation.
 $(\mathbb{S}, \circ)$, or a set of numbers under any arbitrary operation, is considered to be a group $\mathbb{G}$ if
+
 1. The operation is closed, meaning that for all $x,y$ in $\mathbb{S}$ such that $x+y$ is also in $\mathbb{S}$
 2. The set has an unique identity, in other words $e + x = x + e = x$
 3. Every element in the set has an inverse
