using sql with python blog conclusion fixed

--- a/content/blog/using-sql-with-python/index.mdx
+++ b/content/blog/using-sql-with-python/index.mdx
@@ -217,4 +217,4 @@ print(cursor.fetchall())
 
 Do the same with the other db files. You just simply need to change `films` into another table's name.
 
-That's it. We just learned 8 keypoints mentioned in the beginning of the post. Hope you enjoy it.
+That's it. We just learned 7 things that I mentioned in the beginning of the post. Hope you enjoy it.
