--- a/content/blog/gradient-descent-implementation-with-python/main.mdx
+++ b/content/blog/gradient-descent-implementation-with-python/main.mdx
@@ -2,7 +2,7 @@
 title: Gradient Descent Implementation with Python
 type: 'blog'
 date: 2021-12-10
-published: true
+published: false
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
