--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -3,7 +3,7 @@ title: Overview of Linear Algebra
 type: 'blog'
 date: 2021-05-17
 published: true
-tags: ['Linear Algebra']
+tags: ['Linear Algebra', 'Mathematics']
 ---
 
 import { Link } from 'gatsby';
