--- a/content/blog/overview-of-linear-algebra/matrix-operations-and-systems-of-linear-equations.mdx
+++ b/content/blog/overview-of-linear-algebra/matrix-operations-and-systems-of-linear-equations.mdx
@@ -3,7 +3,7 @@ title: Matrix Operations and System of Linear Equations
 type: 'blog'
 date: 2021-05-17
 published: false
-tags: ['Linear Algebra']
+tags: ['Linear Algebra', 'Mathematics']
 ---
 
 This blog is about Matrix Operations and System of Linear Equations.
