--- a/content/blog/overview-of-linear-algebra/vector-space.mdx
+++ b/content/blog/overview-of-linear-algebra/vector-space.mdx
@@ -3,7 +3,7 @@ title: Vector Space
 type: 'blog'
 date: 2021-05-17
 published: false
-tags: ['Linear Algebra']
+tags: ['Linear Algebra', 'Mathematics']
 ---
 
 Before defining what vector space is, we should know what a group $\mathbb{G}$ and a field $\mathbb{F}$ are.
