--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -3,7 +3,7 @@ title: T-Test or Z-Test?
 type: 'blog'
 date: 2021-05-17
 published: true
-tags: ['Statistics']
+tags: ['R', 'Statistics', 'Sampling']
 ---
 
 There are many hypothesis testing methods exist in the realm of Statistics.
