--- a/content/blog/using-sql-with-python/index.mdx
+++ b/content/blog/using-sql-with-python/index.mdx
@@ -3,7 +3,7 @@ title: Using SQL with Python
 type: 'blog'
 date: 2021-09-17
 published: true
-tags: ['SQL', 'Python']
+tags: ['Python', 'SQL']
 ---
 
 In this post, we are going to learn a few things:
