--- a/content/blog/enabling-latex-with-gatsbyjs/index.mdx
+++ b/content/blog/enabling-latex-with-gatsbyjs/index.mdx
@@ -2,8 +2,8 @@
 title: Enabling Latex with Gatsby.js
 type: 'blog'
 date: 2021-02-13
-published: true
-tags: ['Web Dev']
+published: false
+tags: ['Web Development']
 ---
 
 This blog is useful only if you have a website made with Gatsby.JS and MDX included in the project.
