--- a/content/blog/overview-of-linear-algebra/canonical-forms.mdx
+++ b/content/blog/overview-of-linear-algebra/canonical-forms.mdx
@@ -3,7 +3,7 @@ title: Canonical Forms
 type: 'blog'
 date: 2021-05-17
 published: false
-tags: ['Linear Algebra']
+tags: ['Linear Algebra', 'Mathematics']
 ---
 
 This blog is about Canonical Forms.
