--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -3,7 +3,7 @@ title: My Personal Website
 type: 'portfolio'
 date: 2021-04-19
 published: true
-tags: ['Web Dev']
+tags: ['Web Development']
 ---
 
 I made this website from scratch using a React-based, GraphQL powered, static site generator called [Gatsby.js](https://www.gatsbyjs.com).
