blog description added & element placement rearranged

--- a/content/blog/enabling-latex-with-gatsbyjs/index.mdx
+++ b/content/blog/enabling-latex-with-gatsbyjs/index.mdx
@@ -3,6 +3,7 @@ title: Enabling Latex with Gatsby.js
 type: 'blog'
 date: 2021-02-13
 published: false
+description: '...'
 tags: ['Web Development']
 ---
 
