--- a/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
+++ b/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
@@ -3,6 +3,7 @@ title: Fizz Buzz, Simple yet Misunderstood
 type: 'blog'
 date: 2021-02-10
 published: false
+description: '...'
 tags: ['Python']
 ---
 
