--- a/content/blog/gradient-descent-implementation-with-python/main.mdx
+++ b/content/blog/gradient-descent-implementation-with-python/main.mdx
@@ -1,8 +1,9 @@
 ---
-title: Gradient Descent Implementation with Python
+title: Gradient Descent
 type: 'blog'
 date: 2021-12-10
 published: false
+description: '...'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
