--- a/content/blog/my-journey-in-computer-science/index.mdx
+++ b/content/blog/my-journey-in-computer-science/index.mdx
@@ -3,6 +3,7 @@ title: My Journey in Computer Science
 type: 'blog'
 date: 2021-06-15
 published: false
+description: '...'
 tags: ['Personal']
 ---
 
