--- a/content/blog/overview-of-linear-algebra/vector-space.mdx
+++ b/content/blog/overview-of-linear-algebra/vector-space.mdx
@@ -3,6 +3,7 @@ title: Vector Space
 type: 'blog'
 date: 2021-05-17
 published: false
+description: '...'
 tags: ['Linear Algebra', 'Mathematics']
 ---
 
