--- a/content/blog/sql_frameworks_plus_python/index.mdx
+++ b/content/blog/sql_frameworks_plus_python/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: Using SQL with Python
+title: SQL Frameworks + Python
 type: 'blog'
 date: 2021-09-17
 published: true
+description: 'A tutorial on how to interact with SQL database frameworks using Python.'
 tags: ['Python', 'SQL']
 ---
 
