--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -3,6 +3,7 @@ title: My Personal Website
 type: 'portfolio'
 date: 2021-04-19
 published: true
+description: '...'
 tags: ['Web Development']
 ---
 
