--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: Overview of Linear Algebra
 type: 'blog'
-date: 2021-05-17
+date: 2021-05-10
 published: true
+description: 'A brief overview over topics covered in Linear Algebra text book written by Stephen H. Friendberg'
 tags: ['Linear Algebra', 'Mathematics']
 ---
 
