--- a/content/blog/overview-of-linear-algebra/linear-transformations-and-matrices.mdx
+++ b/content/blog/overview-of-linear-algebra/linear-transformations-and-matrices.mdx
@@ -3,6 +3,7 @@ title: Linear Transformations and Matrices
 type: 'blog'
 date: 2021-05-17
 published: false
+description: '...'
 tags: ['Linear Algebra', 'Mathematics']
 ---
 
