--- a/content/blog/overview-of-linear-algebra/matrix-operations-and-systems-of-linear-equations.mdx
+++ b/content/blog/overview-of-linear-algebra/matrix-operations-and-systems-of-linear-equations.mdx
@@ -3,6 +3,7 @@ title: Matrix Operations and System of Linear Equations
 type: 'blog'
 date: 2021-05-17
 published: false
+description: '...'
 tags: ['Linear Algebra', 'Mathematics']
 ---
 
