--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -3,6 +3,7 @@ title: T-Test or Z-Test?
 type: 'blog'
 date: 2021-05-17
 published: true
+description: 'An attempt to answer the question: "What is the difference between a T-Test and a Z-Test?"'
 tags: ['R', 'Statistics', 'Sampling']
 ---
 
