My Personal Website images updated

--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -3,13 +3,13 @@ title: My Personal Website
 type: 'portfolio'
 date: 2021-04-19
 published: true
-description: '...'
-tags: ['Web Development']
+description: 'A portfolio website made with Gatsby.js'
+tags: ['Web Development', 'React']
 ---
 
 I made this website from scratch using a React-based, GraphQL powered, static site generator called [Gatsby.js](https://www.gatsbyjs.com).
 
-![My Personal Website](./personal-website.png)
+![My Personal Website (Light Mode)](./light-mode.png)
 
 There are many static site generators, such as [Hugo](https://gohugo.io/) and [Jekyll](https://jekyllrb.com/).
 However, after a thorough research, I chose [Gatsby.js](https://www.gatsbyjs.com) since I wanted to get a better understanding in using [React](https://reactjs.org/).
@@ -18,6 +18,8 @@ Simply said, I learned how to write better [React](https://reactjs.org/) code an
 
 Not only I had learned some React related skills, I also learned how to reproduce and carefully elaborate the technical issues that I encountered in [Gatsby.js](https://www.gatsbyjs.com) community on Github.
 [Gatsby.js](https://www.gatsbyjs.com) has a huge community which makes it friendly for beginners. In my spare time, I would help resolve the issues posted in the community.
+
+![My Personal Website (Dark Mode)](./dark-mode.png)
 
 After developing this website for quite some time, I realize that making a great and readable website requires a good understanding of web design and human behaviour.
 Thus, I spent a significant amount of time on how to create a user-friendly website. Here is a list of things I learned:
