--- a/content/blog/gradient-descent-from-scratch/index.mdx
+++ b/content/blog/gradient-descent-from-scratch/index.mdx
@@ -23,7 +23,8 @@ $$
     \text{MSE} = \frac{1}{N} \sum_{i=1}^N (\hat{y}_i - y_i)^2
 $$
 
-From the MSE equation, we then have a cost function for Gradient Descent which means how far, or the error, the prediction from the regression line.
+From the MSE equation, we then have a cost function for Gradient Descent which means how far, or the error, the predictions from the regression line.
+The further the data are from the regression line, the larger the cost function value.
 We should minimize the cost function denoted as $J(\Theta_0, \Theta_1)$ where it is equivalent to
 
 $$
