--- a/content/blog/gradient-descent-from-scratch/index.mdx
+++ b/content/blog/gradient-descent-from-scratch/index.mdx
@@ -125,7 +125,7 @@ plt.plot(
 
 Once we have done fitting, or training, we then visualize the result.
 
-![The Regression Line Sepal Lengths Against Petal Widths](./scikit-lr.png)
+![The iris dataset regression line with Scikit](./scikit-lr.png)
 
 # 2. Mini-Batch Gradient Descent
 
