--- a/content/blog/gradient-descent-from-scratch/index.mdx
+++ b/content/blog/gradient-descent-from-scratch/index.mdx
@@ -34,7 +34,7 @@ $$
 Second, it's regression line equation, and it goes like
 
 $$
-    y = a_0 + a_1 \times x_1
+    y = a_0 + a_1 \cdot x_1
 $$
 
 where $a_0$ is the intercept and $a_1$ is the first coefficient. Most people know this equation as
@@ -51,7 +51,7 @@ If we plot the equation above, it's going to look like the figure below.
 Last, the equation for updating the weight.
 
 $$
-\Theta_{i} = \Theta_i - \alpha \times \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1)
+\Theta_{i} = \Theta_i - \alpha \cdot \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1)
 $$
 
 where
@@ -73,13 +73,13 @@ $$
 Solving the partial derivation above, we then have
 
 $$
-    \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1) = \frac{1}{N} (\hat{y}_i - y_i) \times x_i
+    \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1) = \frac{1}{N} (\hat{y}_i - y_i) \cdot x_i
 $$
 
 Plugging the result back to the original function, we have
 
 $$
-\Theta_{i} = \Theta_i - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i) \times x_i
+\Theta_{i} = \Theta_i - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i) \cdot x_i
 $$
 
 After getting ourselves familiar with these 3 things, let's delve right into the implementations.
@@ -128,7 +128,7 @@ Once we have done fitting, or training, we then visualize the result.
 Let's see the intercept and the coefficient that `LinearRegression()` produced from our dataset.
 We are also want to see how much the MSE is, so let's print that as well.
 
-```python:title=intercept-coefficient-and-MSE
+```python:title=intercept-coefficient-and-mse
 print(reg.intercept_, reg.coefficient_)
 # [-3.200215] [[0.75291757]]
 
@@ -138,12 +138,127 @@ print(f"Linear Regression's MSE is {lr_mse}")
 # Linear Regression's MSE is 0.19101500769427357
 ```
 
+Before we start working on Gradient Descent, we need the following three functions.
+
+```python:title=helper-functions
+def sum_err_graph(algorithm, df, iterations):
+    plt.figure(figsize=(6,5))
+    plt.plot(np.arange(0, iterations), df['sum_error'][:iterations], color = 'r')
+    plt.title(f'{algorithm} Cost Function Over {iterations} Iterations')
+    plt.legend(["cost funtion"])
+
+def scatter_plot_with_regression_line(gd_intercept, gd_coefficient):
+    plt.figure(figsize=(6,5))
+    sns.scatterplot(
+        x = sepal_length,
+        y = petal_width,
+        hue = species_names
+    )
+    plt.plot(
+        sepal_length,
+        gd_intercept + gd_coefficient * sepal_length,
+        color = 'r'
+    )
+    plt.title(f"intercept = {gd_intercept:.2f} and coefficient = {gd_coefficient:.2f}")
+
+def calculate_mse(algorithm, gd_intercept, gd_coefficient):
+    gd_predictions = [gd_intercept + gd_coefficient * x for x in sepal_length]
+    gd_mse = mean_squared_error(
+        gd_predictions,
+        petal_width
+    )
+    print(f"The {algorithm}'s MSE is {gd_mse}")
+```
+
 # 1. Gradient Descent
+
+$$
+    \Theta_{i} = \Theta_i - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i) \cdot x_i
+$$
+
+The equation above is the heart of entire algorithm.
+Let's denote the intercept $b_0$ and the first coefficient be $b_1$.
+Since we have two weights that we have to update over time, we have to change $\Theta_i$ to the variables we intend to use.
+In this case, they are $b_0$ and $b_1$.
+
+$$
+    b_0 = b_0 - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i)
+$$
+
+and to update the first coefficient
+
+$$
+    b_1 = b_1 - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i) \cdot x_i
+$$
+
+Converting those two equations above to python code, we then have
+
+```python:title=gradient-descent
+def gd(x, y, epochs, df, alpha = 0.01):
+    length = len(x)
+    intercept, coefficient = 0.0, 0.0
+    for epoch in range(epochs):
+        sum_error = 0.0
+        predictions = predict_list(intercept, coefficient, x)
+        b0_error = (1/length) * np.sum(predictions - y)
+        b1_error = (1/length) * np.sum((predictions - y) * x)
+        intercept = intercept - alpha * b0_error
+        coefficient = coefficient - alpha * b1_error
+        sum_error = sum_error + np.sum((predictions - y) ** 2) / (2 * length)
+        df.loc[epoch] = [intercept, coefficient, sum_error]
+    return df
+```
+
+Then we create a dataframe to store the result and run the `gd()` function for over 10000 times.
+
+```python:title=gd-10000-iterations
+gd_loss = pd.DataFrame(columns=['intercept', 'coefficient', 'sum_error'])
+gd_loss = gd(sepal_length, petal_width, epochs = 10000, df = gd_loss)
+```
+
+Let's see how the regression lines tend to look like at the 1000th, the 5000th, and the 1000th iterations.
+
+## 1.1 GD 1000 Iterations
+
+```python:title=1000-iter-gd-results
+epoch = 1000
+calculate_mse(
+    'GD',
+    gd_loss['intercept'].loc[epoch-1],
+    gd_loss['coefficient'].loc[epoch-1]
+)
+scatter_plot_with_regression_line(gd_loss['intercept'].loc[epoch-1], gd_loss['coefficient'].loc[epoch-1])
+sum_err_graph('GD', gd_loss, epoch)
+```
+
+![Regression line with 1000 of GD](./scatter-1000.png)
+
+![Cost function values over 1000 iterations](./cost-1000.png)
+
+With over 1000 iterations, the MSE value is `0.3309592484431454`
+
+## 1.2 GD 5000 Iterations
+
+![Regression line with 1000 of GD](./scatter-5000.png)
+
+![Cost function values over 1000 iterations](./cost-5000.png)
+
+The MSE value is `0.2215636705284282`.
+
+## 1.3 GD 10000 Iterations
+
+![Regression line with 1000 of GD](./scatter-10000.png)
+
+![Cost function values over 1000 iterations](./cost-10000.png)
+
+The MSE value is `0.19557315833450503`.
+
+After 10000 iterations, our GD's MSE, `0.19557315833450503`, is quite close to Scikit-Learn's Linear Regression's MSE which is `0.19101500769427357`.
+
+Combining everything, here is how the regression line changes over time.
+
+![Regression line changes over time](./overall.png)
 
 # 2. Mini-Batch Gradient Descent
 
 # 3. Stochastic Gradient Descent
-
-```
-
-```
