file name changed

--- a/content/blog/gradient-descent-from-scratch/index.mdx
+++ b/content/blog/gradient-descent-from-scratch/index.mdx
@@ -220,7 +220,7 @@ Let's see how the regression lines tend to look like at the 1000th, the 5000th, 
 
 ## 1.1 GD 1000 Iterations
 
-```python:title=1000-iter-gd-results
+```python:title=1000-iter-gd
 epoch = 1000
 calculate_mse(
     'GD',
