--- a/content/blog/gradient-descent-from-scratch/index.mdx
+++ b/content/blog/gradient-descent-from-scratch/index.mdx
@@ -289,6 +289,10 @@ plt.plot(
 )
 ```
 
+Let's animate the movement of the regression lines.
+
+![Regression line animation](./animation.gif)
+
 # 2. Mini-Batch Gradient Descent
 
 # 3. Stochastic Gradient Descent
